# LAD2025

./: README.md
01_TerminalProject/: Makefile  Show  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: .gitignore  Makefile  gdb_script1.txt  gdb_script2.txt  range.c  test1_reference.txt  test2_reference.txt
05_Regexps/: Makefile  esub.c
06_Tracing/: .gitignore  Makefile  main.c  protect_lib.c
07_Environmental/: .gitignore  CMakeLists.txt
07_Environmental/src/: rhasher.c
08_I18n/: .gitignore  CMakeLists.txt  guess.c
08_I18n/po/: ru.po
09_PatchDiff/: Makefile  maze.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: .gitignore  CMakeLists.txt  buf.h  tests.c
11_Docementing/: .gitignore  CMakeLists.txt  Doxyfile
11_Docementing/po/: ru.po
11_Documenting/: CMakeLists.txt  Doxyfile.in  guess.1  guess.c
12_InstallPackaging/: .gitignore  CMakeLists.txt  Doxyfile.in  guess.c  install.sh  uninstall.sh
12_InstallPackaging/lib/: CMakeLists.txt  roman.c  roman.h  roman.pc.in
12_InstallPackaging/po/: ru.po
12_InstallPackaging/tests/: test_game.c  test_roman.c
